devops/kustomize/base/hnweb-frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: hnweb-frontend
  labels:
    app: hnweb-frontend
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: hnweb-frontend
    deployment: hnweb-frontend
