devops/kustomize/base/hnweb-network-policy.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hnweb-allow-all
  labels:
    app: hnweb-frontend
spec:
  podSelector:
    matchLabels:
      app: hnweb-frontend
  ingress:
    - {}
  policyTypes:
    - Ingress
